--- a/strand/iOS/Strand/Strand/DFFriendProfileViewController.xib
+++ b/strand/iOS/Strand/Strand/DFFriendProfileViewController.xib
@@ -24,8 +24,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nc7-0m-VWp" userLabel="Header Bar">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="61"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vRE-Zm-eLd" customClass="DFProfilePhotoStackView" customModule="Strand" customModuleProvider="target">
-                            <rect key="frame" x="64" y="26" width="35" height="35"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vRE-Zm-eLd" customClass="DFProfileStackView">
+                            <rect key="frame" x="28" y="26" width="35" height="35"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="35" id="YmW-5a-rjk"/>
@@ -33,13 +33,13 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Count labels" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8iR-ga-e4d">
-                            <rect key="frame" x="107" y="43" width="86" height="18"/>
+                            <rect key="frame" x="71" y="43" width="86" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iNL-1h-xwh">
-                            <rect key="frame" x="8" y="33" width="52" height="22"/>
+                            <rect key="frame" x="8" y="33" width="16" height="22"/>
                             <state key="normal" image="Assets/Icons/BackBarButtonIcon">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -48,7 +48,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmR-gx-IVb">
-                            <rect key="frame" x="107" y="25" width="47" height="21"/>
+                            <rect key="frame" x="71" y="25" width="47" height="21"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
