--- a/strand/iOS/Strand/Strand/DFStrandGallerySectionHeaderView.xib
+++ b/strand/iOS/Strand/Strand/DFStrandGallerySectionHeaderView.xib
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="51"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Gn-iv-GBQ" customClass="DFProfilePhotoStackView" customModule="Strand" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Gn-iv-GBQ" customClass="DFProfileStackView">
                     <rect key="frame" x="8" y="8" width="35" height="35"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
