--- a/strand/iOS/Strand/Strand/DFSwapTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFSwapTableViewCell.xib
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vcm-E6-ho6" customClass="DFProfilePhotoStackView" customModule="Strand" customModuleProvider="target">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vcm-E6-ho6" customClass="DFProfileStackView">
                         <rect key="frame" x="15" y="12" width="45" height="45"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
