tweak summary page

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -139,7 +139,7 @@
 			</tr>
 			<tr class='ui-row' >
 				<td class='col1 right b-r'> Photos Shared </td>
-				<td class='counts'> {{ statsCounts.percentPhotosShared|floatformat:1 }}% </td>
+				<td class='counts' title='{{ statsCounts.percentPhotosShared|floatformat:2 }}'> {{ statsCounts.percentPhotosShared|floatformat:1 }}% </td>
 			</tr>
 
 		</table>
