--- a/strand/iOS/Strand/Strand/DFPhotoPickerHeaderReusableView.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoPickerHeaderReusableView.xib
@@ -53,19 +53,20 @@
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/XIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="1eo-hD-Usa">
-                    <rect key="frame" x="8" y="148" width="52" height="18"/>
+                    <rect key="frame" x="8" y="152" width="16" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="18" id="EuJ-WY-jqG"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Matched with Aseem, Derek" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9iF-TP-ceP">
-                    <rect key="frame" x="68" y="149" width="169" height="16"/>
+                    <rect key="frame" x="32" y="153" width="169" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2dn-xX-Haw">
-                    <rect key="frame" x="239" y="146" width="52" height="22"/>
+                    <rect key="frame" x="203" y="140" width="31" height="42"/>
+                    <inset key="contentEdgeInsets" minX="5" minY="10" maxX="10" maxY="10"/>
                     <state key="normal" image="Assets/Icons/XIcon.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -84,7 +85,8 @@
                 <constraint firstItem="1eo-hD-Usa" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" constant="8" id="e6X-Q5-ad1"/>
                 <constraint firstItem="2dn-xX-Haw" firstAttribute="centerY" secondItem="9iF-TP-ceP" secondAttribute="centerY" id="hGp-fJ-VuT"/>
                 <constraint firstItem="2dn-xX-Haw" firstAttribute="leading" secondItem="9iF-TP-ceP" secondAttribute="trailing" constant="2" id="i3g-Te-8b3"/>
-                <constraint firstItem="AOt-4j-b54" firstAttribute="top" secondItem="1eo-hD-Usa" secondAttribute="bottom" constant="8" id="iHp-NK-76V"/>
+                <constraint firstItem="AOt-4j-b54" firstAttribute="top" secondItem="1eo-hD-Usa" secondAttribute="bottom" constant="4" id="iHp-NK-76V"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2dn-xX-Haw" secondAttribute="trailing" constant="10" id="lq4-rm-mgG"/>
                 <constraint firstAttribute="bottom" secondItem="AOt-4j-b54" secondAttribute="bottom" constant="8" id="oHN-f1-qQl"/>
                 <constraint firstItem="1eo-hD-Usa" firstAttribute="centerY" secondItem="9iF-TP-ceP" secondAttribute="centerY" constant="0.5" id="yYX-RL-KXl"/>
             </constraints>
