--- a/strand/iOS/Strand/Strand/DFFeedSectionHeaderView.xib
+++ b/strand/iOS/Strand/Strand/DFFeedSectionHeaderView.xib
@@ -14,18 +14,6 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dMB-6d-4Qm" userLabel="backgroundView">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="51"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="action text" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoo-53-PLK">
-                            <rect key="frame" x="87" y="9" width="64" height="16"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nj5-ys-zcv">
-                            <rect key="frame" x="51" y="9" width="34" height="16"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y0u-L2-2Lz" customClass="DFProfileStackView">
                             <rect key="frame" x="8" y="8" width="35" height="35"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -34,23 +22,19 @@
                                 <constraint firstAttribute="height" constant="35" id="ize-H8-7d9"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mb-Xn-eUJ">
-                            <rect key="frame" x="51" y="27" width="40" height="14"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
-                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nj5-ys-zcv">
+                            <rect key="frame" x="51" y="18" width="34" height="16"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="8mb-Xn-eUJ" firstAttribute="leading" secondItem="Y0u-L2-2Lz" secondAttribute="trailing" constant="8" id="7pM-vM-1co"/>
                         <constraint firstItem="Y0u-L2-2Lz" firstAttribute="leading" secondItem="dMB-6d-4Qm" secondAttribute="leading" constant="8" id="8s7-Sh-bqF"/>
-                        <constraint firstItem="eoo-53-PLK" firstAttribute="leading" secondItem="Nj5-ys-zcv" secondAttribute="trailing" constant="2" id="EhU-KZ-4pR"/>
-                        <constraint firstItem="Y0u-L2-2Lz" firstAttribute="centerY" secondItem="Nj5-ys-zcv" secondAttribute="centerY" constant="8" id="JFS-56-9pK"/>
-                        <constraint firstItem="8mb-Xn-eUJ" firstAttribute="centerY" secondItem="Y0u-L2-2Lz" secondAttribute="centerY" constant="8" id="M1y-z5-0jt"/>
+                        <constraint firstItem="Y0u-L2-2Lz" firstAttribute="centerY" secondItem="Nj5-ys-zcv" secondAttribute="centerY" id="JFS-56-9pK"/>
                         <constraint firstAttribute="bottom" secondItem="Y0u-L2-2Lz" secondAttribute="bottom" constant="8" id="PK6-Bb-Y0q"/>
                         <constraint firstItem="Y0u-L2-2Lz" firstAttribute="top" secondItem="dMB-6d-4Qm" secondAttribute="top" constant="8" id="c8X-wK-I75"/>
-                        <constraint firstItem="eoo-53-PLK" firstAttribute="centerY" secondItem="Nj5-ys-zcv" secondAttribute="centerY" id="ec9-KM-Iyw"/>
                         <constraint firstItem="Nj5-ys-zcv" firstAttribute="leading" secondItem="Y0u-L2-2Lz" secondAttribute="trailing" constant="8" id="x6F-BQ-TbK"/>
                     </constraints>
                 </view>
@@ -64,11 +48,9 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="actionTextLabel" destination="eoo-53-PLK" id="Xgc-ux-pxS"/>
                 <outlet property="actorLabel" destination="Nj5-ys-zcv" id="Fup-lf-hTF"/>
                 <outlet property="backgroundView" destination="dMB-6d-4Qm" id="kdi-ne-8eU"/>
                 <outlet property="profilePhotoStackView" destination="Y0u-L2-2Lz" id="TwZ-RM-6ai"/>
-                <outlet property="subtitleLabel" destination="8mb-Xn-eUJ" id="Rcj-Ho-nNH"/>
             </connections>
             <point key="canvasLocation" x="139" y="158"/>
         </view>
